--- a/hardskills/modulohtml/aula23/index.html
+++ b/hardskills/modulohtml/aula23/index.html
@@ -10,13 +10,16 @@
     <body>
         <header>
             <div>
-                <h1>Luis Gustavo C. Z. Pereira</h1>
-                <h4>
-                    <span>Web Developer</span>
-                    /
-                    <span>Programmer</span>
-                </h4>
-                <h2>Curriculum Vitae</h2>
+                <img src="images/luisformal1.png" />
+                <div>
+                    <h1>Luis Gustavo C. Z. Pereira</h1>
+                    <h4>
+                        <span>Web Developer</span>
+                        /
+                        <span>Programmer</span>
+                    </h4>
+                    <h2>Curriculum Vitae</h2>
+                </div>
             </div>
             <nav id="menu"></nav>
         </header>
@@ -25,7 +28,10 @@
             <article id="subpage"></article>
         </main>
         <footer>
-            Todos os direitos reservados a Luis Gustavo C. Z. Pereira
+            <span>
+                Todos os direitos reservados a Luis Gustavo C. Z. Pereira  
+            </span>
+            <audio src=""></audio>
         </footer>
         <script src="scripts/main.js"></script>
     </body>
