--- a/hardskills/modulohtml/aula23/index.html
+++ b/hardskills/modulohtml/aula23/index.html
@@ -29,7 +29,7 @@
         </main>
         <footer>
             <span>
-                Todos os direitos reservados a Luis Gustavo C. Z. Pereira  
+                Todos os direitos reservados a <strong>Luis Gustavo C. Z. Pereira </strong> 
             </span>
             <audio src=""></audio>
         </footer>
