--- a/hardskills/modulohtml/aula23/home.html
+++ b/hardskills/modulohtml/aula23/home.html
@@ -2,7 +2,7 @@
     <div>
         <div>
             <h2>Olá, seja bem vindo!</h2>
-            <p>Sou <strong>Luis Gustavo</strong>, aspirante a <strong>Desenvolvedor WEB</strong> pela <i>AlphaEdTech</i>. Tenho alguma experiência na área de <strong>Game Dev</strong> que tinha como hobby, da qual trago uma bagagem.</p>
+            <p>Sou Luis Gustavo, aspirante a Desenvolvedor <strong>WEB</strong> pela AlphaEdTech. Tenho alguma experiência na área de <strong>Game Dev</strong>.</p>
             <p>Curioso, proativo, intusiasta de ciência e de jogos em seus mais variados aspectos, da teoria á prática.</p>
             <p><i>"Não acredito em impossível. Mesmo que seja improvável, ainda é possível."</i> - Eu mesmo</p>
             <hr>
