--- a/hardskills/modulohtml/aula23/webdev.html
+++ b/hardskills/modulohtml/aula23/webdev.html
@@ -22,7 +22,7 @@
             </div>
             <hr>
             <div>
-                <h3>Habilidades</h3>
+                <h3>Habilidades <strong>Front-End</strong></h3>
                 <table>
                     <tr id="skillhtml">
                         <td>HTML</td>
