--- a/hardskills/modulohtml/aula23/index.html
+++ b/hardskills/modulohtml/aula23/index.html
@@ -28,6 +28,13 @@
             <article id="subpage"></article>
         </main>
         <footer>
+            <div>
+                <a href="http://" target="_blank" rel="noopener noreferrer"><img src="images/icons/icon-instagram.png"/></a>
+                <a href="http://" target="_blank" rel="noopener noreferrer"><img src="images/icons/icon-whatsapp.png"/></a>
+                <a href="http://" target="_blank" rel="noopener noreferrer"><img src="images/icons/icon-linkedin.png"/></a>
+                <a href="http://" target="_blank" rel="noopener noreferrer"><img src="images/icons/icon-email.png"/></a>
+            </div>
+            <hr>
             <span>
                 Todos os direitos reservados a <strong>Luis Gustavo C. Z. Pereira </strong> 
             </span>
