--- a/hardskills/modulohtml/aula23/home.html
+++ b/hardskills/modulohtml/aula23/home.html
@@ -2,19 +2,22 @@
     <div>
         <div>
             <h2>Olá, seja bem vindo!</h2>
-            <p>Sou Luis Gustavo, aspirante a Desenvolvedor <strong>WEB</strong> pela AlphaEdTech. Tenho alguma experiência na área de <strong>Game Dev</strong>.</p>
-            <p>Curioso, proativo, intusiasta de ciência e de jogos em seus mais variados aspectos, da teoria á prática.</p>
+            <p>Sou Luis Gustavo, aspirante a Desenvolvedor <strong>WEB</strong> pela AlphaEdTech.</p>
+        </div>
+        <div class="list">
+            <p>Tenho <strong>28 anos</strong>.</p>
+            <p>Residindo em <strong>Foz do Iguaçu</strong>, <strong>Paraná</strong>.</p>
+            <p>Estudante de <strong>Desenvolvimento e Analise de Sistemas</strong> na IFPR.</p>
+            <p>Aspirante de <strong>Desenvolvimento Web</strong> na AlphaEdTech.</p>
+            <p>Hobby de <strong>Desenvolvimento de Games</strong> com Unity.</p>
+        </div>
+        <div></div>
+            <p>Curioso, proativo, entusiasta de ciência a jogos em seus mais variados aspectos, da teoria á prática.</p>
+            <p>Em constante evolução de <strong>SoftSkills</strong> e <strong>HardSkills</strong>.</p>
+            <p>Tenho alguma experiência na área de <strong>Game Dev</strong>.</p>
             <p><i>"Não acredito em impossível. Mesmo que seja improvável, ainda é possível."</i> - Eu mesmo</p>
             <hr>
         </div>
-        <ul>
-            <li>Tenho <strong>28 anos</strong>.</li>
-            <li>Residindo em <strong>Foz do Iguaçu</strong>, <strong>Paraná</strong>.</li>
-            <li>Estudante de <strong>Desenvolvimento e Analise de Sistemas</strong> na IFPR.</li>
-            <li>Aspirante de <strong>Desenvolvimento Web</strong> na AlphaEdTech.</li>
-            <li>Hobby de <strong>Desenvolvimento de Games</strong> com Unity.</li>
-        </ul>
-        
     </div>
     <!--<img src="images/luisformal.png">-->
 </div>
