--- a/hardskills/modulohtml/aula23/webdev.html
+++ b/hardskills/modulohtml/aula23/webdev.html
@@ -7,7 +7,7 @@
         </div>
         <div>
             <hr>
-            <div>
+            <div class="list">
                 <h3>Formação</h3>
                 <p><strong>Desenvolvimento e Analise de Sistemas</strong>, IFPR. <i>(Em formação)</i></p>
                 <p><strong>Desenvolvimento Web</strong>, AlphaEdTech. <i>(Em formação)</i></p>
@@ -15,10 +15,10 @@
             <hr>
             <div>
                 <h3>Objetivos</h3>
-                <ul>
-                    <li>Aplicar a tecnologia na vida da pessoas</li>
-                    <li>Atuar como profissional <strong>Full-Stack</strong> com Front-End / Back-End</li>
-                </ul>
+                <div class="list">
+                    <p>Aplicar a tecnologia na vida da pessoas</p>
+                    <p>Atuar como profissional <strong>Full-Stack</strong> com Front-End / Back-End</p>
+                </div>
             </div>
             <hr>
             <div>
