--- a/hardskills/modulohtml/aula23/gamedev.html
+++ b/hardskills/modulohtml/aula23/gamedev.html
@@ -22,31 +22,31 @@
             <div>
                 <h3>Habilidades <strong>Unity</strong></h3>
                 <table>
-                    <tr id="skillueditor">
+                    <tr class="star5">
                         <td>Unity Editor</td>
                         <td><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"></td>
                     </tr>
-                    <tr id="skillcsharp">
+                    <tr class="star4">
                         <td>CSharp</td>
                         <td><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"></td>
                     </tr>
-                    <tr id="skillshadergraph">
+                    <tr class="star4">
                         <td>Shader Graph</td>
                         <td><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"></td>
                     </tr>
-                    <tr id="skillanimator">
+                    <tr class="star4">
                         <td>Animator</td>
                         <td><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"></td>
                     </tr>
-                    <tr id="skillscriptable">
+                    <tr class="star5">
                         <td>Scriptable Objects</td>
                         <td><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"></td>
                     </tr>
-                    <tr id="skilldots">
+                    <tr class="star2">
                         <td>Data-Oriented Technology Stack</td>
                         <td><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"></td>
                     </tr>
-                    <tr id="skillnetwork">
+                    <tr class="star1">
                         <td>Networking</td>
                         <td><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"></td>
                     </tr>
