--- a/hardskills/modulohtml/aula23/myself.html
+++ b/hardskills/modulohtml/aula23/myself.html
@@ -1,77 +1,116 @@
 <div>
     <div>
         <div>
-            <h2>Eu mesmo</h2>
+            <h2>Sobre mim</h2>
             <p>Sou uma pessoa muito prática, amo a realidade, a filosofia e a ciência.</p>
             <p><i>"No final, apenas três coisas importam: quanto você amou, quão gentilmente viveu, e quão graciosamente deixou de lado as coisas que não eram para você."</i> - Buda</p>
         </div>
-        <div>
-            <hr>
+        <div class="grade">
             <div>
-                <table>
-                    <tr>
-                        <td>
-                            <h3>Interesses</h3>
-                            <ul>
-                                <li>Programação</li>
-                                <li>Músicas</li>
-                                <li>Games</li>
-                            </ul>
-                        </td>
-                        <td>
-                            <h3>Desinteresses</h3>
-                            <ul>
-                                <li>Televisão</li>
-                                <li>Redes Sociais</li>
-                                <li>Frutos do Mar</li>
-                            </ul>
-                        </td>
-                    </tr>
-                </table>
+                <h3>Interesses</h3>
+                <div class="list">
+                    <strong>Programação</strong>
+                    <strong>Músicas</strong>
+                    <strong>Games</strong>
+                </div>
             </div>
-            <hr>
             <div>
-                <h3></h3>
-                <table>
-                    <tbody>
-                        <tr class="skills-header"><td><h3>SoftSkills</h3></td></tr>
-                        <tr id="skillautoconhecimento">
-                            <td>Autoconhecimento</td>
-                            <td><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"></td>
-                        </tr>
-                        <tr id="skillcooperatividade">
-                            <td>Cooperatividade</td>
-                            <td><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"></td>
-                        </tr>
-                        <tr id="skillintelemocional">
-                            <td>Inteligencia Emocional</td>
-                            <td><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"></td>
-                        </tr>
-                        <tr id="skillcinesica">
-                            <td>Análise Cinésica</td>
-                            <td><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"></td>
-                        </tr>
-                    </tbody>
-                    <tbody>
-                        <tr class="skills-header"><td><h3>HardSkills</h3></td></tr>
-                        <tr id="skilleditimages">
-                            <td>Edição de Imagens</td>
-                            <td><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"></td>
-                        </tr>
-                        <tr id="skilldesign">
-                            <td>Design</td>
-                            <td><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"></td>
-                        </tr>
-                        <tr id="skillmodelagem">
-                            <td>Modelagem 3D</td>
-                            <td><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"></td>
-                        </tr>
-                        <tr id="skillanimacao">
-                            <td>Animação 3D</td>
-                            <td><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"></td>
-                        </tr>
-                    </tbody>
-                </table>
+                <h3>Desinteresses</h3>
+                <div class="list">
+                    <strong>Televisão</strong>
+                    <strong>Redes Sociais</strong>
+                    <strong>Frutos do Mar</strong>
+                </div>
+            </div>
+            <div>
+                <h3 class="skills-header">SoftSkills</h3>
+                <div class="list">
+                    <span>
+                        <h4>Autoconhecimento</h4>
+                        <span class="star4">
+                            <img src="images/emote_star.png">
+                            <img src="images/emote_star.png">
+                            <img src="images/emote_star.png">
+                            <img src="images/emote_star.png">
+                            <img src="images/emote_star.png">
+                        </span>
+                    </span>
+                    <span>
+                        <h4>Criatividade</h4>
+                        <span class="star4">
+                            <img src="images/emote_star.png">
+                            <img src="images/emote_star.png">
+                            <img src="images/emote_star.png">
+                            <img src="images/emote_star.png">
+                            <img src="images/emote_star.png">
+                        </span>
+                    </span>
+                    <span>
+                        <h4>Inteligencia Emocional</h4>
+                        <span class="star4">
+                            <img src="images/emote_star.png">
+                            <img src="images/emote_star.png">
+                            <img src="images/emote_star.png">
+                            <img src="images/emote_star.png">
+                            <img src="images/emote_star.png">
+                        </span>
+                    </span>
+                    <span>
+                        <h4>Análise Cinésica</h4>
+                        <span class="star4">
+                            <img src="images/emote_star.png">
+                            <img src="images/emote_star.png">
+                            <img src="images/emote_star.png">
+                            <img src="images/emote_star.png">
+                            <img src="images/emote_star.png">
+                        </span>
+                    </span>
+                </div>
+            </div>
+            <div>
+                <h3 class="skills-header">HardSkills</h3>
+                <div class="list">
+                    <span>
+                        <h4>Edição de Imagens</h4>
+                        <span class="star3">
+                            <img src="images/emote_star.png">
+                            <img src="images/emote_star.png">
+                            <img src="images/emote_star.png">
+                            <img src="images/emote_star.png">
+                            <img src="images/emote_star.png">
+                        </span>
+                    </span>
+                    <span>
+                        <h4>Design</h4>
+                        <span class="star2">
+                            <img src="images/emote_star.png">
+                            <img src="images/emote_star.png">
+                            <img src="images/emote_star.png">
+                            <img src="images/emote_star.png">
+                            <img src="images/emote_star.png">
+                        </span>
+                    </span>
+                    <span>
+                        <h4>Modelagem 3D</h4>
+                        <span class="star3">
+                            <img src="images/emote_star.png">
+                            <img src="images/emote_star.png">
+                            <img src="images/emote_star.png">
+                            <img src="images/emote_star.png">
+                            <img src="images/emote_star.png">
+                        </span>
+                    </span>
+                    <span class="star2">
+                        <h4>Animação 3D</h4>
+                        <span>
+                            <img src="images/emote_star.png">
+                            <img src="images/emote_star.png">
+                            <img src="images/emote_star.png">
+                            <img src="images/emote_star.png">
+                            <img src="images/emote_star.png">
+                        </span>
+                    </span>
+                </div>
             </div>
         </div>
     </div>
