--- a/hardskills/modulohtml/aula23/webdev.html
+++ b/hardskills/modulohtml/aula23/webdev.html
@@ -22,25 +22,76 @@
             </div>
             <hr>
             <div>
-                <h3>Habilidades <strong>Front-End</strong></h3>
-                <table>
-                    <tr id="skillhtml">
-                        <td>HTML</td>
-                        <td><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"></td>
-                    </tr>
-                    <tr id="skillcss">
-                        <td>CSS</td>
-                        <td><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"></td>
-                    </tr>
-                    <tr id="skilljs">
-                        <td>JavaScript</td>
-                        <td><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"></td>
-                    </tr>
-                    <tr id="skillservers">
-                        <td>Servidores</td>
-                        <td><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"><img src="images/emote_star.png"></td>
-                    </tr>
-                </table>
+                <div>
+                    <h3>Habilidades <strong>Front-End</strong></h3>
+                    <div class="list">
+                        <span>
+                            <img src="images/icons/icon-html.png" title="HTML" />
+                            <span class="star4">
+                                <img src="images/emote_star.png">
+                                <img src="images/emote_star.png">
+                                <img src="images/emote_star.png">
+                                <img src="images/emote_star.png">
+                                <img src="images/emote_star.png">
+                            </span>
+                        </span>
+                        <span>
+                            <img src="images/icons/icon-css.png" title="CSS" />
+                            <span class="star3">
+                                <img src="images/emote_star.png">
+                                <img src="images/emote_star.png">
+                                <img src="images/emote_star.png">
+                                <img src="images/emote_star.png">
+                                <img src="images/emote_star.png">
+                            </span>
+                        </span>
+                        <span>
+                            <img src="images/icons/icon-js.png" title="JavaScript" />
+                            <span class="star2">
+                                <img src="images/emote_star.png">
+                                <img src="images/emote_star.png">
+                                <img src="images/emote_star.png">
+                                <img src="images/emote_star.png">
+                                <img src="images/emote_star.png">
+                            </span>
+                        </span>
+                    </div>
+                </div>
+                <div>
+                    <h3>Habilidades <strong>Back-End</strong></h3>
+                    <div class="list">
+                        <span>
+                            <img src="images/icons/icon-web.png" title="Servidores" />
+                            <span class="star1">
+                                <img src="images/emote_star.png">
+                                <img src="images/emote_star.png">
+                                <img src="images/emote_star.png">
+                                <img src="images/emote_star.png">
+                                <img src="images/emote_star.png">
+                            </span>
+                        </span>
+                        <span>
+                            <img src="images/icons/icon-nodejs.png" title="NodeJS" />
+                            <span class="star0">
+                                <img src="images/emote_star.png">
+                                <img src="images/emote_star.png">
+                                <img src="images/emote_star.png">
+                                <img src="images/emote_star.png">
+                                <img src="images/emote_star.png">
+                            </span>
+                        </span>
+                        <span>
+                            <img src="images/icons/icon-postgree.png" title="Postgree" />
+                            <span class="star0">
+                                <img src="images/emote_star.png">
+                                <img src="images/emote_star.png">
+                                <img src="images/emote_star.png">
+                                <img src="images/emote_star.png">
+                                <img src="images/emote_star.png">
+                            </span>
+                        </span>
+                    </div>
+                </div>
             </div>
             <hr>
             <div>
