--- a/hardskills/modulohtml/aula23/webdev.html
+++ b/hardskills/modulohtml/aula23/webdev.html
@@ -21,7 +21,7 @@
                 </div>
             </div>
             <hr>
-            <div>
+            <div class="grade">
                 <div>
                     <h3>Habilidades <strong>Front-End</strong></h3>
                     <div class="list">
